force-app/main/default/objects/Case_Classification__c/Case_Classification__c.object-meta.xml
<CustomObject>
    <description>An object used for classifying cases for some fields such as Functional Group, Category and Sub Category.</description>
    <label>Case Classification</label>
    <nameField>
        <label>Case Classification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Classifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>