force-app/main/default/objects/Case_Classification__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If marked true, this record will be available for use on cases. If marked false, this record cannot be used for case creation or edits.</description>
    <inlineHelpText>If marked true, this record will be available for use on cases. If marked false, this record cannot be used for case creation or edits.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>