force-app/main/default/objects/Case_Classification__c/fields/Chatter_Group_Id__c.field-meta.xml
<CustomField>
    <fullName>Chatter_Group_Id__c</fullName>
    <description>Field that holds the id value of the chatter group which will have the transfer notification posted to.</description>
    <inlineHelpText>Holds the id value of the chatter group which will have the transfer notification posted to (this field is what's used by the flow)</inlineHelpText>
    <label>Chatter Group Id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>