force-app/main/default/objects/Case_Classification__c/fields/Chatter_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Chatter_Group_Name__c</fullName>
    <description>Field that holds the name of the chatter group which will have the transfer notification posted to.</description>
    <inlineHelpText>Holds the name of the chatter group which will have the transfer notification posted to.</inlineHelpText>
    <label>Chatter Group Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>