force-app/main/default/objects/Case_Classification__c/fields/Default_Case_Description__c.field-meta.xml
<CustomField>
    <fullName>Default_Case_Description__c</fullName>
    <description>Contains the default description to add to a case when this category is selected.</description>
    <label>Default Case Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>