force-app/main/default/objects/Case_Classification__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of this record and how or when it should be used by the functional group.</description>
    <inlineHelpText>Description of this record and how or when it should be used by the functional group.</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>