force-app/main/default/objects/Case_Classification__c/fields/Is_Functional_Group_Private__c.field-meta.xml
<CustomField>
    <fullName>Is_Functional_Group_Private__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Functional Group Private</label>
    <type>Checkbox</type>
</CustomField>