force-app/main/default/objects/Case_Classification__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If the field is dependent upon another field, it will be listed here.</description>
    <inlineHelpText>If the field is dependent upon another field, it will be listed here.</inlineHelpText>
    <label>Parent</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2) OR (3 AND 4)</booleanFilter>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Category</value>
        </filterItems>
        <filterItems>
            <field>Case_Classification__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Functional Group</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Sub Category</value>
        </filterItems>
        <filterItems>
            <field>Case_Classification__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Category</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Case_Classification__c</referenceTo>
    <relationshipLabel>Case Classifications</relationshipLabel>
    <relationshipName>Case_Classifications</relationshipName>
    <type>Lookup</type>
</CustomField>