force-app/main/default/objects/Case_Classification__c/fields/Queue_Id__c.field-meta.xml
<CustomField>
    <fullName>Queue_Id__c</fullName>
    <businessOwnerGroup>Data_Owner_IAM_Identity_Management</businessOwnerGroup>
    <description>If a case with this Private functional group is assigned to a user, and that user is then deprovisioned, set the owner of the case to this Id post-deprovision.</description>
    <inlineHelpText>This is the default 18 digits queue id used by the user deprovision process when the case owner is deprovisioned and case Functional Group is Private.</inlineHelpText>
    <label>Queue Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>