force-app/main/default/objects/Case_Classification__c/fields/Receives_Chatter_Notifications__c.field-meta.xml
<CustomField>
    <fullName>Receives_Chatter_Notifications__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This denotes if the functional group is configured to receive Chatter notifications regarding a change in case ownership. The setting only applies to Functional Groups.</description>
    <inlineHelpText>This denotes if the functional group is configured to receive Chatter notifications regarding a change in case ownership. The setting only applies to Functional Groups.</inlineHelpText>
    <label>Receives Chatter Notifications</label>
    <type>Checkbox</type>
</CustomField>