force-app/main/default/objects/Case_Classification__c/fields/Record_Types__c.field-meta.xml
<CustomField>
    <fullName>Record_Types__c</fullName>
    <description>When the record is type = Functional Group, this field lists which case record types the functional group can be used.</description>
    <inlineHelpText>When the record is type = Functional Group, this field lists which case record types the functional group can be used.</inlineHelpText>
    <label>Record Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ASU Admission Services</fullName>
            </value>
            <value>
                <fullName>(Admin Only) ASU Advisor Outreach</fullName>
            </value>
            <value>
                <fullName>ASU Coach Outreach</fullName>
            </value>
            <value>
                <fullName>(Admin Only) ASU Retention Outreach</fullName>
            </value>
            <value>
                <fullName>ASU Service</fullName>
            </value>
            <value>
                <fullName>ASU Student Outreach</fullName>
            </value>
            <value>
                <fullName>ASU Secured Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>