force-app/main/default/objects/Case_Classification__c/fields/Record_Types_String__c.field-meta.xml
<CustomField>
    <fullName>Record_Types_String__c</fullName>
    <description>Text/string that represents the values in the multi-select picklist "Record Types" (Record_Types__c) so it can be used in code.</description>
    <label>Record Types String</label>
    <length>255</length>
    <type>Text</type>
</CustomField>