force-app/main/default/objects/Case_Classification__c/fields/Visible__c.field-meta.xml
<CustomField>
    <fullName>Visible__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Used to determine if an active record should be visible in the lookup fields for case.</description>
    <inlineHelpText>Used to determine if an active record should be visible in the lookup fields for case.</inlineHelpText>
    <label>Visible</label>
    <type>Checkbox</type>
</CustomField>