force-app/main/default/objects/Case_Classification__c/recordTypes/Functional_Group.recordType-meta.xml
<RecordType>
    <fullName>Functional_Group</fullName>
    <active>true</active>
    <label>Functional Group</label>
</RecordType>