force-app/main/default/objects/Case_Classification__c/recordTypes/Sub_Category.recordType-meta.xml
<RecordType>
    <fullName>Sub_Category</fullName>
    <active>true</active>
    <label>Sub Category</label>
</RecordType>