force-app/main/default/objects/Case_Classification__c/validationRules/HelpDesk_Profile_CC.validationRule-meta.xml
<ValidationRule>
    <fullName>HelpDesk_Profile_CC</fullName>
    <active>true</active>
    <description>For users in the Help Desk to update only categories under the Help Desk functional group. Will give an error if attempting to edit:
a. A Sub-category
b. A Functional Group
c. A Category not under the Help Desk functional group</description>
    <errorConditionFormula>AND($Profile.Name ='ASU Service - Help Desk',
OR(RecordType.DeveloperName ='Functional_Group',

AND(RecordType.DeveloperName = 'Category',
Parent__r.Name &lt;&gt;'Help Desk'),

ISCHANGED(Name),

RecordType.DeveloperName = 'Sub_Category'
)
)</errorConditionFormula>
    <errorMessage>Users with the profile of ASU Service - Help Desk can only edit Case Classification values for categories under the Functional Group "Help Desk"</errorMessage>
</ValidationRule>