force-app/main/default/objects/Case_Classification__c/validationRules/Queue_ID_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Queue_ID_Required</fullName>
    <active>true</active>
    <description>Queue Id is required when Is_Function_Group_Private is True</description>
    <errorConditionFormula>AND( 
Is_Functional_Group_Private__c = TRUE, 
ISBLANK(Queue_Id__c) 
)</errorConditionFormula>
    <errorMessage>If "Is Functional Group Private" checked then "Queue Id" cannot be blank.</errorMessage>
</ValidationRule>