force-app/main/default/objects/Case_Classification__c/validationRules/Record_Type_Id_Required_for_Functional_G.validationRule-meta.xml
<ValidationRule>
    <fullName>Record_Type_Id_Required_for_Functional_G</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 RecordTypeId = '012q00000009HMV',
 ISBLANK(Record_Types_String__c)
)</errorConditionFormula>
    <errorDisplayField>Record_Types__c</errorDisplayField>
    <errorMessage>Functional Groups must be associated to at least one record type</errorMessage>
</ValidationRule>