force-app/main/default/objects/Case_Classification__c/listViews/All_Active_Categories.listView-meta.xml
<ListView>
    <fullName>All_Active_Categories</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Parent__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case_Classification__c.Category</value>
    </filters>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Active Categories</label>
    <sharedTo>
        <role>UTO_University_Technology_Office</role>
    </sharedTo>
</ListView>