force-app/main/default/objects/Case_Classification__c/listViews/All_Active_Functional_Groups.listView-meta.xml
<ListView>
    <fullName>All_Active_Functional_Groups</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>RECORDTYPE</columns>
    <columns>Record_Types__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case_Classification__c.Functional_Group</value>
    </filters>
    <label>All Active Functional Groups</label>
    <sharedTo>
        <role>UTO_University_Technology_Office</role>
    </sharedTo>
</ListView>