force-app/main/default/objects/Case_Classification__c/listViews/Help_Desk.listView-meta.xml
<ListView>
    <fullName>Help_Desk</fullName>
    <columns>OBJECT_ID</columns>
    <columns>Parent__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>NAME</columns>
    <columns>Default_Case_Description__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Visible__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Parent__c</field>
        <operation>equals</operation>
        <value>Help Desk</value>
    </filters>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Help Desk Categories</label>
</ListView>